--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.8",
+    "@angular/cdk": "^18.2.13",
     "@angular/common": "^17.0.8",
     "@angular/compiler": "^17.0.8",
     "@angular/core": "^17.0.8",
@@ -39,6 +40,8 @@
     "datatables.net": "^1.11.3",
     "datatables.net-bs5": "^1.11.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "line-awesome": "1.3.0",
     "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.4",
@@ -66,7 +69,7 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.8",
     "@types/bootstrap": "^5.2.6",
-    "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net": "^1.12.3",
     "@types/jasmine": "~5.1.4",
     "@types/jquery": "^3.5.9",
     "@types/node": "^20.10.6",
